--- a/data-architect.html
+++ b/data-architect.html
@@ -78,7 +78,7 @@ This is a great opportunity for someone who specializes in Kafka...</p>
 <p>Jul 18, 2019 ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/op0DafwW'>Capgemini Japan Careers - Big Data Architect (Data Lake Architect)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/op0DafwW'>Capgemini Japan Careers - Big Data Architect (Data Lake Architect)</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -162,7 +162,7 @@ effectively?...</p>
 traditional data warehouses & data lakes to streaming cloud & big data 
 applications?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/nortal/db80da35-e058-4205-acc0-aa41f73d767c'>Nortal - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nortal/db80da35-e058-4205-acc0-aa41f73d767c'>Nortal - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -200,7 +200,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -268,7 +268,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nextgames/f3892dae-cb1f-4a71-965e-37019afdf215'>Next Games - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/nextgames/f3892dae-cb1f-4a71-965e-37019afdf215'>Next Games - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -338,7 +338,7 @@ class?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -363,7 +363,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=e8b9ac261'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=e8b9ac261'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
@@ -419,7 +419,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/5F1ADAC236'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<h5><a href='https://strongbox-data-solution.workable.com/j/5F1ADAC236'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
