--- a/android-engineer.html
+++ b/android-engineer.html
@@ -98,7 +98,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -219,7 +219,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -261,7 +261,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -299,7 +299,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -364,7 +364,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -392,7 +392,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4334286002'>Job Application for Android Engineer  at Rakuten Rewards (formerly Ebates)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rakutenrewards/jobs/4334286002'>Job Application for Android Engineer  at Rakuten Rewards (formerly Ebates)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -408,7 +408,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690386466--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690386466--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
