Remedy BPCI Partners, LLC. Careers - Data Engineer.     Data Engineer at DocsApp . Job @ TwinCap (Zürich): Data Engineer | JOIN. Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters. Ramsey Solutions Careers - Data Engineer. Xenzone - Jobs: Data Engineer, London, microservices, javascript, kubernetes, react - Apply online. Job Application for Data Engineer  at BJSS. Job Application for Data Engineer at BJSS. Skechers Senior Data Engineer | SmartRecruiters. Senior Data Engineer - Cecelia Health - Career Page. Sr Data Engineer - ELSEVIER Careers. Numberly Data Engineer | SmartRecruiters. Job Application for Data Engineer at SPINS, LLC. Job Application for Sr. Data Engineer at Simon Data. Lamudi - Data Engineer. Cloud Academy - Jobs: Data Engineer - Apply online. Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC. Data Engineer(Rakuten Ichiba : Internal business system, Data Platform) Fukuoka Branch : ECBD - Rakuten Careers. Job Application for Data Engineer  at RiskIQ. Data Engineer - Apply online - Depop - Jobs. Crisalix - Jobs: Data Engineer - Apply online. Lingoda Data Engineer (Remote option) | SmartRecruiters. Sr Data Engineer - RELX Careers. Babylon Health - Senior Data Engineer. Eurostar - Jobs: Lead Digital Data Engineer - Apply online. Job @ TwinCap (Zürich): Data Engineer | JOIN. Data Engineer - Monitoring and Observability - Bossanova Robotics - Career Page. Senior Data Engineer (Cloud) - Fractal Analytics - Career Page. Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page. Data Engineer. Cloud Academy - Jobs: Data Engineer - Apply online. ETL Data Engineer - Apply online - Photobox Group - Jobs. Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs. Adevinta Classified Media Hungary Kft - Jobs: Szoftverfejleszt? / Data Engineer - Apply online. Stepping Up Solutions  Data Engineer | SmartRecruiters. Stepping Up Solutions  Lead Data Engineer | SmartRecruite

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,10 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/remedypartners/job/oIiDafwx'>Remedy BPCI Partners, LLC. Careers - Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hd7/'>
     Data Engineer at DocsApp
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://twincap.join.com/jobs/276682-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
@@ -70,13 +74,18 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Skechers1/743999692386948-senior-data-engineer'>Skechers Senior Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Skechers1/743999692386948-senior-data-engineer'>Skechers Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='http://ceceliahealth.applytojob.com/apply/7XwqfV9YFB/Senior-Data-Engineer'>Senior Data Engineer - Cecelia Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/sr-data-engineer-25224'>Sr Data Engineer - ELSEVIER Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... And LexisNexis has over 2PB of the best legal training data in the world! We are 
+looking for an experienced data engineer who is devoted to...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692358496-data-engineer'>Numberly Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -102,7 +111,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light">Mendrisio, Ticino, Switzerland Italy Milan</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -118,7 +127,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Data Engineer at Depop.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/59815A8933'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/59815A8933'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Data Engineer at Crisalix.</p>
 <hr/>
@@ -135,11 +144,11 @@ looking for an experienced data engineer who is devoted to...</p>
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/j/44F61C510C'>Eurostar - Jobs: Lead Digital Data Engineer - Apply online</a></h5> 
+<h5><a href='https://eurostar.workable.com/j/44F61C510C'>Eurostar - Jobs: Lead Digital Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/261058-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/261058-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>19. Juli 2019 ... TwinCap GmbH has a job opening for Data Engineer in Z?rich (published: 19.07.
 2019). Apply now or check the other available jobs.</p>
@@ -148,7 +157,7 @@ looking for an experienced data engineer who is devoted to...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer-Cloud'>Senior Data Engineer (Cloud) - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer-Cloud'>Senior Data Engineer (Cloud) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -170,7 +179,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://platform-science.workable.com/jobs/1083475'>Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs</a></h5> 
+<h5><a href='https://platform-science.workable.com/jobs/1083475'>Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Vehicle Data Engineer at Platform Science.</p>
 <hr/>
@@ -204,7 +213,7 @@ analytic,?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-jax.icims.com/jobs/26992/data-engineer/job'>Data Engineer in Farmington, Connecticut | Careers at FACT ...</a></h5> 
+<h5><a href='https://careers-jax.icims.com/jobs/26992/data-engineer/job'>Data Engineer in Farmington, Connecticut | Careers at FACT ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... FACT - Farmington, Connecticut is now hiring a Data Engineer in Farmington, 
 Connecticut. Review all of the job details and apply today!</p>
@@ -335,7 +344,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/oOMAafw4'>Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/oOMAafw4'>Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -412,7 +421,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -442,7 +451,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -451,7 +460,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-goldmansachs.icims.com/jobs/52375/data-engineer-%28dio---edge%29---client-data-engineering/job'>Careers Center Data Engineer (DIO - Edge) - Client Data ...</a></h5> 
+<h5><a href='https://careers-goldmansachs.icims.com/jobs/52375/data-engineer-%28dio---edge%29---client-data-engineering/job'>Careers Center Data Engineer (DIO - Edge) - Client Data ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
 Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
@@ -469,15 +478,6 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <p>3 days ago ... You'll be using modern, scalable technologies to support the expansion of 
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
-<p><span class="badge badge-light">Richmond</span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
-was born out of the challenges facing today's marketers. Incubated within?...</p>
 <hr/>
 
 
